--- a/PSets/PSet2/pset2.tex
+++ b/PSets/PSet2/pset2.tex
@@ -46,7 +46,7 @@
     \end{enumerate}
     \item In the electron transfer reaction between \ce{[Co(NH3)5X]^2+} and \ce{[Cr(H2O)5]^2+}, the rate of the reaction depends strongly on the \ce{X-} ligand. When $\ce{X}=\ce{Cl-}$, the rate is $\num{60000}$ and when $\ce{X}=\ce{H2O}$ (note that the complex is $3+$ in this case) a rate of $0.5$ is observed. Rationalize this difference in rate.
     \begin{proof}[Answer]
-        As ligand size and charge increase, so does reaction rate. Ligand size helps because the extra diffusion of the electron cloud literally extends electron density further between the compounds and doesn't necessitate that they exist so close together. Charge also helps because of its electrostatic influence (it's easier to transfer an electron if there are more electrons at play to assist in the process).
+        As ligand size and charge increase, so does reaction rate (for an inner sphere mechanism, which this likely is). Ligand size helps because the extra diffusion of the electron cloud literally generates more overlap area. Charge also helps because of its electrostatic influence (it's easier to transfer an electron if there are more electrons at play to assist in the process).
     \end{proof}
     \item In class we discussed the Creutz-Taube ion, which is a classic example of a mixed-valence complex. The degree of mixed-valency will be directly proportional to the rate of inter-valence charge transfer.
     \begin{enumerate}
@@ -126,9 +126,9 @@
         % Electrophilic attack: Electron count decreases by 1 (L-type ligand to X-type ligand), coordination number does not change (we are only modifying a ligand), and the oxidation state increases by 2.\par
         % Nucleophilic attack: Electron count does not change (a 2-electron donor becomes a 1-electron donor, but the compound's overall charge also decreases by 1), coordination number does not change (we are only modifying a ligand), and the oxidation state does not change (an L-type ligand becomes an X-type ligand, but the compound's overall charge also decreases by 1).
 
-        Insertion: $\e[-]$ count decreases by 2, C.N. decreases by 2, and O.S. does not change.\par
-        Electrophilic attack: $\e[-]$ count decreases by 1, C.N. decreases by 1, and O.S. increases by 2.\par
-        Nucleophilic attack: $\e[-]$ count does not change, C.N. decreases by 1, and O.S. does not change.
+        Insertion: $\e[-]$ count decreases by 2, C.N. decreases by 1, and O.S. does not change.\par
+        Electrophilic attack: $\e[-]$ count decreases by 2, C.N. does not change, and O.S. does not change.\par
+        Nucleophilic attack: $\e[-]$ count does not change, C.N. does not change, and O.S. does not change.
     \end{proof}
     \item Transition metal carbene complexes have been known for many years, but there are two distinct types: Fischer Carbenes and Schrock type Alkylidenes. Differentiate these ligand types using diagrams and resonance structures. How should their reactivity change?
     \begin{proof}[Answer]
@@ -158,7 +158,7 @@
             \caption{Carbene regime resonance structures.}
             \label{fig:carbeneResonance}
         \end{figure}
-        Fischer carbenes are electrophilic at the carbon, and Schrock alkylidenes are nucleophilic at the carbon. This notably implies that Fischer carbenes more readily participate in cyclopropanation.
+        Fischer carbenes are electrophilic at C, their heteroatom is stabilized, and they typically react with late metals. Schrock alkylidenes are nucleophilic at C, have no heteroatom, and typically react with early metals.
     \end{proof}
     \newpage
     \item Rank the following complexes, from highest to lowest, in terms of their \ce{CO} stretching frequency and rationalize: \ce{Pt(CO)4^2+}, \ce{Ni(CO)4^2+}, \ce{PtCl2(CO)2}, \ce{Fe(CO)5^2-}, \ce{Re(CO)4^3-}, and \ce{Mo(CO)6}.
@@ -171,18 +171,18 @@
         % \ce{Re(CO)4^3-}: Re should backbond more strongly as a third row TM. Earlier TM, same $d$ count, lower TM than \ce{Fe(CO)5^2-}.
 
         \begin{equation*}
-            \ce{Ni(CO)4^2+}
-            > \ce{Pt(CO)4^2+}
+            \ce{Pt(CO)4^2+}
             > \ce{PtCl2(CO)2}
+            > \ce{Ni(CO)4^2+}
             > \ce{Mo(CO)6}
             > \ce{Fe(CO)5^2-}
             > \ce{Re(CO)4^3-}
         \end{equation*}
         $\nu_{\ce{CO}}$ increases as backbonding decreases. As such, to rank the complexes by their \ce{CO} stretching frequency, it will suffice to rank them by the strength of their backbonding. Note that backbonding decreases as $d$ count increases, and as we move up and to the right in the transition metals on the periodic table. \ce{L -> M} $\sigma$ donation can also increase metal backbonding.\par\medskip
         We will show that every compound in the list exhibits less backbonding than the one after it.\par\smallskip
-        To begin, the only difference between \ce{Ni(CO)4^2+} and \ce{Pt(CO)4^2+} is the position of the metal center in Group 10. Since \ce{Ni} is a first row TM and \ce{Pt} is a third row TM, the \ce{Ni} center will backbond more weakly than \ce{Pt} center.\par
-        The only difference between \ce{Pt(CO)4^2+} and \ce{PtCl2(CO)2} is the exchange of two carbonyl ligands for chlorides. Since chlorides are stronger $\sigma$ donors, they will make their \ce{Pt} center slightly more electron rich, causing it to engage in slightly more backbonding.\par
-        To compare \ce{PtCl2(CO)2} and \ce{Mo(CO)6}, we will focus on the large differences in the metal center and neglect the smaller ones in the ligands. Indeed, although \ce{Pt} is a third row TM and \ce{Mo} is second row, platinum both has a higher oxidation state and comes later in the periodic table (i.e., has a higher electronegativity). Both of these factors decrease its relative backbonding.\par
+        To begin, the only difference between \ce{Pt(CO)4^2+} and \ce{PtCl2(CO)2} is the exchange of two carbonyl ligands for chlorides. Since chlorides are stronger $\sigma$ donors, they will make their \ce{Pt} center slightly more electron rich, causing it to engage in slightly more backbonding.\par
+        To compare \ce{PtCl2(CO)2} and \ce{Ni(CO)4^2+}, we will focus on the differences in the metal center and neglect the ones in the ligands. Indeed, platinum has a higher electronegativity than nickel, so it will hold onto its electrons more tightly. Thus, it engages in less backbonding.\par
+        To compare \ce{Ni(CO)4^2+} and \ce{Mo(CO)6}, we will focus on the large differences in the metal center and neglect the smaller ones in the ligands. Indeed, although \ce{Pt} is a third row TM and \ce{Mo} is second row, platinum both has a higher oxidation state and comes later in the periodic table (i.e., has a higher electronegativity). Both of these factors decrease its relative backbonding.\par
         There are a number of differences between \ce{Mo(CO)6} and \ce{Fe(CO)5^2-}. To begin with, \ce{Mo} is lower and earlier in the periodic table than \ce{Fe}. However, molybdenum also has a relatively higher oxidation state and more ligands to which it can backbond. As such, it backbonds less to each ligand overall.\par
         Lastly, we must discuss \ce{Fe(CO)5^2-} and \ce{Re(CO)4^3-}. Both have identical $d$ counts, but \ce{Fe} comes later in the periodic table, is higher in the periodic table, has a higher oxidation state, and has more ligands than \ce{Re}. As such, the iron center most certainly backbonds less strongly than the rhenium center.
     \end{proof}
@@ -212,28 +212,26 @@
                 \ce{$\frac{1}{2}$ Mn2(CO)10 ->[$\frac{1}{2}$Br2] Mn(CO)5Br ->[LiPh][-LiBr] PhMn(CO)5}
             \end{equation*}
         \end{proof}
+        \vspace{-0.5em}
         \item \ce{CpMo(CO)2(PPh3)\{C(=O)Bu\}} from \ce{Mo(CO)6}.
-        % Wikipedia (probs better but 1 extra step):
-        \begin{align*}
-            \ce{Mo(CO)6} &\ce{->[Br2][-2CO]} \ce{Mo(CO)4Br2 ->[LiCp][-LiBr,CO] CpMo(CO)3Br ->[LiBHEt3][-BEt3, LiBr] CpMo(CO)3H}\\
-            &\ce{->[\chemfig{=[:30]-[:-30]-[:30]}]} \ce{CpMo(CO)2\{C(=O)Bu\} ->[PPh3] CpMo(CO)2(PPh3)\{C(=O)Bu\}}
-        \end{align*}
-    
-        % Page 126 (need cationic metal complex?):
-        % \begin{align*}
-        %     \ce{Mo(CO)6} &\ce{->[HBr][-{2 CO}]} \ce{Mo(CO)4HBr ->[LiCp][-LiBr,CO] CpMo(CO)3H}\\
-        %     &\ce{->[\chemfig{=[:30]-[:-30]-[:30]}]} \ce{CpMo(CO)2\{C(=O)Bu\} ->[PPh3] CpMo(CO)2(PPh3)\{C(=O)Bu\}}
-        % \end{align*}
+        \begin{proof}[Answer]
+            \begin{align*}
+                \ce{Mo(CO)6} &\ce{->[LiCp][-3CO]} \ce{Li[CpMo(CO)3] ->[LiBu, PPh3] Li2[CpMo(CO)2(PPh3)\{C(=O)Bu\}]}\\
+                &\ce{->[2AgOTf][-2Ag^0, 2LiOTf]} \ce{CpMo(CO)2(PPh3)\{C(=O)Bu\}}
+            \end{align*}
+        \end{proof}
+        \vspace{-0.5em}
         \item \ce{[Cp^*Ta($\mu_2${-}Br)2]2} from \ce{TaBr5}.
         \begin{proof}[Answer]
             \begin{equation*}
                 \ce{2TaBr5 ->[2LiCp^*][-2LiBr] 2CpTaBr4 ->[4KC8][-4KBr] 2CpTaBr2 -> [Cp^*Ta($\mu_2${-}Br)2]2}
             \end{equation*}
         \end{proof}
+        \vspace{-0.5em}
         \item \ce{(PPh3)2NiClNO} from \ce{NiCl2}.
         \begin{proof}[Answer]
             \begin{equation*}
-                \ce{NiCl2 ->[KC8][-Cl] NiCl ->[NO-] NiClNO ->[2PPh3] (PPh3)2NiClNO}
+                \ce{NiCl2 ->[2PPh3] (PPh3)2NiCl2 ->[CoCp2] (PPh3)2NiCl ->[NO] (PPh3)2NiClNO}
             \end{equation*}
         \end{proof}
     \end{enumerate}
@@ -378,11 +376,11 @@
         \end{proof}
         \item Account for this trend in equilibrium constants.
         \begin{proof}[Answer]
-            Phenyl groups are more electron rich than ethyl groups. As such, their donation to the metal center both makes it easier for cobalt to dissociate a carbonyl and helps stabilize the unstable $15\,\e[-]$ product.
+            Phenyl groups have stronger electron withdrawing effects than ethyl groups. As such, with them, backbonding is weakened, so it is easier for cobalt to dissociate a carbonyl. Additionally, steric effects from the larger phenyl groups help push the carbonyl off.
         \end{proof}
         \item Of these three phosphines, which will give the cobalt complex with the lowest energy carbonyl stretch in the infrared spectrum? Explain briefly.
         \begin{proof}[Answer]
-            \ce{PEtPh2} because its inductive donation effects are the greatest. The extra electron density that it donates to the cobalt center will increase cobalt's backbonding to the carbonyl ligand, lowering $\nu_{\ce{CO}}$.
+            \ce{PEt3} because its inductive donation effects are the greatest. The extra electron density that it donates to the cobalt center will increase cobalt's backbonding to the carbonyl ligand, lowering $\nu_{\ce{CO}}$.
         \end{proof}
     \end{enumerate}
     \item This question is meant to guide you through through Prof. Jack Halpern's classic kinetic study of Vaska's complex \ce{IrCl(CO)(PPh3)2} and its \ce{Br} and \ce{I} analogues for the oxidative addition of \ce{H2}, \ce{O2}, and \ce{CH3I} \parencite{bib:HalpernVaska}.
@@ -421,10 +419,14 @@
                     \end{scope}
                     \draw [very thick,-latex] [xshift=3.5cm] (0,0) -- (1.3,0);
                     \begin{scope}[xshift=7cm,yshift=0.1cm]
-                        \node{\chemfig{Ir(-X)(-[1]PPh_3)(-[2]CH_3)(-[4]OC)(-[5]Ph_3P)}};
+                        \node{
+                            \chemleft{[}
+                                \chemfig{Ir(-X)(-[1]PPh_3)(-[2]CH_3)(-[4]OC)(-[5]Ph_3P)}
+                            \chemright{]^+}
+                        };
                     \end{scope}
                     \begin{scope}[xshift=8.5cm]
-                        \node at (0,-1) {\charge{[extra sep=3pt]180=\:}{I^-}};
+                        \node at (-0.4,-1) {\charge{[extra sep=3pt]180=\:}{I^-}};
                     \end{scope}
                     \draw [very thick,-latex] [xshift=9.5cm] (0,0) -- (1.3,0);
                     \begin{scope}[xshift=13cm]
@@ -434,7 +436,7 @@
                     \begin{scope}[semithick,blx,-stealth]
                         \draw (1,0.4) to[out=90,in=180] (1.7,2);
                         \draw (2.6,2.1) to[out=60,in=150] (3.1,2.2);
-                        \draw (8.1,-1) to[out=180,in=-90] (7,-0.2);
+                        \draw (7.7,-1) to[out=180,in=-90] (7,-0.2);
                     \end{scope}
                 \end{tikzpicture}
             \end{center}
@@ -458,10 +460,10 @@
             ${\color{white}hi}$
             \begin{center}
                 \schemestart
-                    \chemfig{Ir(-X)(-[1]PPh_3)(-[4]OC)(-[5]Ph_3P)}\arrow{0}[,0]\+{,,-1.25em}\chemfig{H-[6]H}
-                    \arrow
+                    \chemfig{Ir(-X)(-[1]PPh_3)(-[4]OC)(-[5]Ph_3P)}
+                    \arrow{->[\ce{H2}]}
                     \chemleft{[}
-                        \chemfig{Ir(-[:10,,,,dashed]H?)(-[1]PPh_3)(-[:80,,,,dashed]H?[,,dashed])(-[4]OC)(-[5]Ph_3P)(-[:-70]X)}
+                        \chemfig{Ir(-[:60,1.5,,,dashed]H?)(-[1]PPh_3)(-[:120,1.5,,,dashed]H?[,,dashed])(-[:-160]OC)(-[5]Ph_3P)(-[:-20]X)}
                     \chemright{]^\ddagger}
                     \arrow
                     \chemfig{Ir(-H)(-[1]PPh_3)(-[2]H)(-[4]OC)(-[5]Ph_3P)(-[6]X)}
@@ -471,7 +473,7 @@
         \end{proof}
         \item Which complex reacts with \ce{H2} the fastest? Considering the transition state you drew above, speculate as to why this is the case.
         \begin{proof}[Answer]
-            \ce{IrI(CO)(PPh3)2} reacts with \ce{H2} the fastest. This could be because iodine is the best $\sigma$-donor, meaning that iridium has more electron density with which it can attack \ce{H2}.
+            \ce{IrI(CO)(PPh3)2} reacts with \ce{H2} the fastest. This could be the iridium in this complex has the least electron density, meaning it is most keen for the $\sigma$ donation of the incoming \ce{H2} molecule.
         \end{proof}
     \end{enumerate}
 \end{enumerate}
