--- a/Notes/Unit2/Unit2.tex
+++ b/Notes/Unit2/Unit2.tex
@@ -329,7 +329,7 @@
     \end{itemize}
     \item Example:
     \begin{itemize}
-        \item \ce{Co(NH3)^2+} / \ce{Co(NH3)6^3+} is H.S. $d^7$ / L.S. $d^6$.
+        \item \ce{Co(NH3)6^2+} / \ce{Co(NH3)6^3+} is H.S. $d^7$ / L.S. $d^6$.
         \item Self-exchange is slow because nuclear reorganization is large ($\SI{0.2}{\angstrom}$ difference in bond length, which is significant).
         \begin{itemize}
             \item Note that this arises from the different electronic configurations.
@@ -1344,8 +1344,8 @@
         \end{itemize}
         \item Pressurized \ce{CO}:
         \begin{itemize}
-            \item \ce{Co + CO ->[{35 atm}][RT] Co2(CO)8}\footnote{RT is short for room temperature.}.
-            \item \ce{Fe + CO ->[{300 atm}][$\SI{300}{\celsius}$] Fe(CO)5}.
+            \item \ce{Co + CO ->[$\SI{35}{atm}$][RT] Co2(CO)8}\footnote{RT is short for room temperature.}.
+            \item \ce{Fe + CO ->[$\SI{300}{atm}$][$\SI{300}{\celsius}$] Fe(CO)5}.
         \end{itemize}
         \item Reduce with \ce{CO}:
         \begin{itemize}
@@ -1546,7 +1546,7 @@
     \item Review the powerpoint on carbonyls.
     \item Midterm tips:
     \begin{itemize}
-        \item \ce{CO} is a really important ligand to understand: Know it's MO diagram, resonance structures,IR stretch influences.
+        \item \ce{CO} is a really important ligand to understand: Know it's MO diagram, resonance structures, IR stretch influences.
         \item Know phosphines: Tolman parameter and cone angle, donor properties, orbitals, etc.
         \item Know some about olefins, too.
         \item Synthesis is very important. Use your electron counting skills, understanding of lability, and redox reactions.
@@ -1572,7 +1572,7 @@
 
 \section{Lecture 10: Nitrosyls, Allyls, and More}
 \begin{itemize}
-    \item \marginnote{4/19:}First off, a survery of other $\pi$ acceptors.
+    \item \marginnote{4/19:}First off, a survey of other $\pi$ acceptors.
     \begin{itemize}
         \item Many of these are analogous to \ce{CO}.
     \end{itemize}
@@ -1981,7 +1981,7 @@
 
 
 
-\section{Hydrides and Silyls}
+\section{Lecture 11: Hydrides and Silyls}
 \begin{itemize}
     \item \marginnote{4/21:}\ce{M-SiR3} (silyl).
     \begin{itemize}
