Intro to Catalysis

--- a/preamble.tex
+++ b/preamble.tex
@@ -40,7 +40,7 @@
 
 \setchemfig{atom sep=2em,fixed length=true,bond offset=3pt,cram width=3pt}
 
-\usetikzlibrary{decorations.markings,backgrounds}
+\usetikzlibrary{decorations.markings,backgrounds,arrows.meta}
 \colorlet{blx}{blue!40!black!80}
 \colorlet{blz}{blue!40!black!20}
 \colorlet{grx}{green!40!black!70}
