--- a/Notes/Unit3/Unit3.tex
+++ b/Notes/Unit3/Unit3.tex
@@ -414,5 +414,24 @@
 
 
 
+\section{Discussion Section}
+\begin{itemize}
+    \item \marginnote{4/27:}There may be a midterm key.
+    \item HW3 will be due Monday 5/3/2021 at 5:00 PM; HW4 will be due Monday 5/10/2021 at 12:00 PM (the usual time, no changes).
+    \item Cross coupling mechanism (from lecture 13?):
+    \begin{itemize}
+        \item Starts with a ligand substitution (or association/dissociation) to get to something lower coordinate.
+        \item Then there will be an oxidative addition.
+        \item ...
+    \end{itemize}
+    \item Alkyls (such as ethyl groups) are more electron-rich than aryls (such as phenyl groups).
+    \begin{itemize}
+        \item Think Homework 2, Problem 12.
+    \end{itemize}
+    \item Goes over stuff that will be useful later in the week for HW3.
+\end{itemize}
+
+
+
 
 \end{document}
